--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
+   <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
