--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Moshify</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="stylesheet/normalize.css" />
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
   <body>
-   <a href="#" class="link-arrow">Learn More</a>
+    <span class="badge badge--primary">10% off</span>
   </body>
 </html>
