--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
   <body>
-    <span class="badge badge--primary">10% off</span>
+    <ul class="list list--tick">
+      <li class="list__item">Item</li>
+      <li class="list__item">Item</li>
+      <li class="list__item">Item</li>
+    </ul>
   </body>
 </html>
