--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
   <body>
-    <ul class="list list--tick">
-      <li class="list__item">Item</li>
-      <li class="list__item">Item</li>
-      <li class="list__item">Item</li>
-    </ul>
+  <span class="icon-container">
+    </svg><svg class="icon icon--primary">
+      <use xlink:href="images/sprite.svg#wordpress"></use>
+    </svg>
+  </span>
   </body>
 </html>
