--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
   <body>
-  <span class="icon-container">
-    </svg><svg class="icon icon--primary">
-      <use xlink:href="images/sprite.svg#wordpress"></use>
-    </svg>
-  </span>
+    <button class="btn btn--primary btn--block">buy now</button>
+    <a href="" class="btn btn--secondary btn--block">checkout</a>
+    <button class="btn btn--outline">buy me</button>
   </body>
 </html>
