Defining basic input

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
   <body>
-    <button class="btn btn--primary btn--block">buy now</button>
-    <a href="" class="btn btn--secondary btn--block">checkout</a>
-    <button class="btn btn--outline">buy me</button>
+    <input type="text" class="input" placeholder="Enter domain name here" />
   </body>
 </html>
