--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
   <body>
-    <input type="text" class="input" placeholder="Enter domain name here" />
+    <div class="input--group">
+      <input type="text" class="input" placeholder="Enter domain name here" />
+      <button class="btn btn--accent">Search</button>
+    </div>
   </body>
 </html>
