--- a/index.html
+++ b/index.html
@@ -13,10 +13,5 @@
     <link rel="stylesheet" href="stylesheet/normalize.css" />
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
-  <body>
-    <div class="input--group">
-      <input type="text" class="input" placeholder="Enter domain name here" />
-      <button class="btn btn--accent">Search</button>
-    </div>
-  </body>
+  <body></body>
 </html>
