--- a/index.html
+++ b/index.html
@@ -13,5 +13,26 @@
     <link rel="stylesheet" href="stylesheet/normalize.css" />
     <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
-  <body></body>
+  <body>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quaerat
+        eius repellendus id facilis sint illo mollitia! Blanditiis, illum
+        sapiente.
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--primary quote__line">
+              <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">Bright Orton</h3>
+            <p class="quote__organization">Ortify Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
+  </body>
 </html>
